<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>vn.com.lcx</groupId>
    <artifactId>processor</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>processor</name>

    <properties>

        <jdk.version>1.8</jdk.version>
        <maven.compiler.source>${jdk.version}</maven.compiler.source>
        <maven.compiler.target>${jdk.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>${jdk.version}</java.version>

        <lombok-org.projectlombok.version>1.18.36</lombok-org.projectlombok.version>
        <maven-compiler-plugin-org.apache.maven.plugins.version>3.13.0
        </maven-compiler-plugin-org.apache.maven.plugins.version>
        <maven-dependency-plugin-org.apache.maven.plugins.version>3.8.1
        </maven-dependency-plugin-org.apache.maven.plugins.version>
        <maven-clean-plugin-org.apache.maven.plugins.version>3.4.0</maven-clean-plugin-org.apache.maven.plugins.version>
        <maven-surefire-plugin-org.apache.maven.plugins.version>3.5.2
        </maven-surefire-plugin-org.apache.maven.plugins.version>
        <maven-jar-plugin-org.apache.maven.plugins.version>3.4.2</maven-jar-plugin-org.apache.maven.plugins.version>
        <maven-install-plugin-org.apache.maven.plugins.version>3.1.3
        </maven-install-plugin-org.apache.maven.plugins.version>
        <maven-resources-plugin-org.apache.maven.plugins.version>3.3.1
        </maven-resources-plugin-org.apache.maven.plugins.version>

    </properties>

    <dependencies>

        <dependency>
            <groupId>vn.com.lcx</groupId>
            <artifactId>common-lib</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok-org.projectlombok.version}</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin-org.apache.maven.plugins.version}</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgument>-proc:none</compilerArgument>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven-dependency-plugin-org.apache.maven.plugins.version}</version>
                <executions>
                    <execution>
                        <id>download-sources</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>resolve-sources</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>download-javadocs</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>resolve-plugins</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>

        <pluginManagement>

            <plugins>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven-clean-plugin-org.apache.maven.plugins.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin-org.apache.maven.plugins.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin-org.apache.maven.plugins.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>${maven-install-plugin-org.apache.maven.plugins.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin-org.apache.maven.plugins.version}</version>
                </plugin>

            </plugins>

        </pluginManagement>

    </build>

</project>
